<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/masukkan_email"
        android:textSize="18sp"
        android:inputType="textEmailAddress"
        android:background="@drawable/shape_edittext"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/masukkan_nama"
        android:textSize="18sp"
        android:inputType="textPersonName"
        android:background="@drawable/shape_edittext"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/notelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/masukkan_no_hp"
        android:textSize="18sp"
        android:inputType="phone"
        android:background="@drawable/shape_edittext"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/masukkan_alamat"
        android:textSize="18sp"
        android:background="@drawable/shape_edittext"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btnsubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/submit"
        android:backgroundTint="@color/purple_200"/>


</LinearLayout>