<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cvuser"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="24dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/txemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ichwansholihin03_gmail_com"
            app:drawableStartCompat="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/txname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ichwan_sholihin"
            app:drawableStartCompat="@drawable/ic_person"
            android:layout_marginTop="6dp"
            android:drawablePadding="5dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/txphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_085766689697"
            app:drawableStartCompat="@drawable/ic_phone"
            android:layout_marginTop="6dp"
            android:drawablePadding="5dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/txaddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jl_rajawali_gg_4"
            app:drawableStartCompat="@drawable/ic_place"
            android:layout_marginTop="6dp"
            android:drawablePadding="5dp"
            android:textSize="18sp"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>